<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">VoteMe</string>


    <!-- Global -->
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>


    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_connect">Login</string>
    <string name="menu_disconnect">Logout</string>


    <!-- API -->
    <string name="api_call">Loading...</string>


    <!-- Home -->
    <string name="home_hint_form_code">Form code</string>
    <string name="home_use_form">Reply to form</string>

    <string name="home_error_form_code_short">Code too short.</string>
    <string name="home_error_form_code_long">Code too long.</string>
    <string name="home_wrong_form_code">Incorrect code.</string>


    <!-- Visitor -->
    <string name="visitor_button_send">Send answer</string>
    <string name="answer_hint_widget">Your answer</string>


    <!-- Admin -->
    <string name="admin_remember_ask">Remember me?</string>

    <string name="admin_title_form">Your forms</string>

    <string name="admin_button_login">Login</string>
    <string name="admin_button_sign">Register</string>

    <string name="admin_hint_username">Username</string>
    <string name="admin_hint_password">Password</string>
    <string name="admin_hint_confirm_password">Confirm password</string>

    <string name="admin_error_username">Username too short.</string>
    <string name="admin_error_password">Password too short.</string>
    <string name="admin_error_confirm_password">Difference between passwords</string>

    <string name="admin_button_open">Open</string>
    <string name="admin_button_close">Close</string>
    <string name="admin_button_show_result">Results</string>
    <string name="admin_button_create_form">New form</string>
    <string name="admin_button_back_to_list">Come back to the list</string>
    <string name="admin_title_result_form">Answers to form <xliff:g id="form_name">%1$s</xliff:g></string>
    <string name="admin_button_save_form">Save form</string>
    <string name="admin_button_add_form">Add form</string>
    <string name="admin_auto_complete_type_of_widget"> Choose your type of widget</string>

    <string name="admin_wrong_username">Incorrect username.</string>
    <string name="admin_wrong_password">Incorrect password.</string>



</resources>